4week-project-day-23-details

--- a/[4주 프로젝트] Day 23.md
+++ b/[4주 프로젝트] Day 23.md
@@ -4,13 +4,15 @@
 
 ### 새롭게 배운내용:
 
-모바일 앱에서 스택과 탭이 돌아가는 로직을 로그인과 로그아웃을 Auth라는 컴포넌트위에서 꼬이지 않도록 만들어야 뒤집어 엎는 일이 없다. 처음에 페이지 컴포넌트를 아예 나눠서 두고 다른 하나에서 기존에 나누었던 컴포넌트를 불러오니 꼬이기 시작했다. 하지만 하나의 큰 스택위에 탭을 쌓고, 그 안에서 스택을 하나씩 쌓으니 무리없이 돌아갔다. => 구조의 중요성!!
+모바일 앱에서 스택과 탭이 돌아가는 로직을 로그인과 로그아웃을 Auth라는 컴포넌트위에서 꼬이지 않도록 만들어야 뒤집어 엎는 일이 없다. 처음에 페이지 컴포넌트를 아예 나눠서 두고 다른 하나에서 기존에 나누었던 컴포넌트를 불러오니 꼬이기 시작했다. 하지만 하나의 큰 스택위에 탭을 쌓고, 그 안에서 스택을 하나씩 쌓으니 무리없이 돌아갔다. => 구조의 중요성!! 로그인이 필요한 앱이라면 로그인 페이지를 이니셜 페이지로 가지는 큰 스택을 만들고 그 위에 네이게이션탭 스택을 쌓으면 된다. 그래야하만 로그아웃 했을때 popToTop() 을 이용해서 다시 처음 페이지로 이동할 수 있다. 그리고 .navigate 를 사용하게 되면 스택에서 쌓이지않고 이동하는 것 같아서 현재로써는 .push 를 이용해서 스택을 쌓으며 이동하도록 했는데 이 부분은 더 공부할 필요가 있다.
 
 ### 오늘 완료한 내용:
 
 로그인과 로그아웃 구조에서도 잘 돌아가도록 심플한 구조로 전체 구조 수정
 
 즐겨찾기, 서치, 결과페이지 싱크 맞춰서 페이지 이동할때마다 렌더링 후 최신 데이터 표시
+
+=> 스택으로 쌓여 있는 탭에서는 탭의 메인에서 리액트 네이티브의 라이프사이클 컴포넌트인 willFocus, didFocus 구독이 가능하다. 그래서 메인 탭에서 구독을 하고 원하는 스택 페이지로 실행하려고 하는 함수를 파라미터로 받아서 실행할 수 있도록 내려주고 다시 탭이 클릭 되었을때 willFocus 가 실행 될 수 있도록 렌더링이 다시 일어나도록 만들었다. 만약 탭이 하나라면 각 컴포넌트에서 구독이 가능하고 구독과 동시에 원하는 페이지에 포커스 될때마다 리 렌더링을 하거나 원하는 액션을 실행할 수 있다. 이 부분에 있어서 안티패턴인지는 모르겠으나 willFocus 나 didFocus 의 구독를 원하는 스택 페이지에서는 할 수 없어서 선택하게 되었다. 리액트 네이티브와 엑스포에 대해 좀 더 공부가 필요하다. 그래야만 실제로 잘 작동하는 구조를 만들 수 있을 것 같다.
 
  테마색상 노란색 + 보라색 CSS
 
